--- a/index.css
+++ b/index.css
@@ -1,48 +1,3 @@
-.parent-wrapper {
-width: 100%;
-  
-}
-.parent {
-  display: flex;
-  font-size: 0;
-  flex-wrap: wrap;
-  margin: 60px 20 0 0px;
-}
-
-.parent2 {
-  display: flex;
-  font-size: 0;
-  flex-wrap: wrap;
-  margin: 0px 20 0 0px;
-}
-.child {
-    display: inline-block;
-    background: #eeeef1;
-    margin: 10px 0 0 2%;
-    flex-grow: 1;
-    height:350px;
-	
-    width: calc(100% * (1/4) - 10px - 1px);
-}
-
-.content2 {
-  display: flex;
-  width: 300px;
-  padding: 10px;
-  border: 1px solid black;
-}
-.left {
-  width: 200px;
-  background-color: red;
-  height: 10px;
-  margin-right: 10px;
-}
-.right {
-  flex: 1;
-  background-color: blue;
-  color: white;
-}
-
 body{
  background-color: ##F9FAFC;
 }
@@ -102,27 +57,12 @@ background-color: white;
 font-size:28px;
 color:white;
 }
-.fa-bell-o {
-    border: none;
-    float: right;
-    background: transparent;
-        background-color: transparent;
-    background-color: white;
-    font-size: 15px;
-    margin-right: 55;
-}
-.top-img {
-    border: none;
-    float: right;
-    background: transparent;
-    background-color: white;
-    font-size: 15px;
-    margin-right: 25px width:30px;
-    height: 30px;
-    margin-top: -20px;
-}
-.top-img-nav{
-
+.fa-bell-o{
+border:none;
+float:right;
+background: transparent;
+background-color: white;
+font-size:15px;
 }
 .left-sidebar a button{
  height:50px;
@@ -135,7 +75,7 @@ background-color: #749EFF;
 
 font-size:30px;
 color:white;
- background-color:#98B8FD;
+ background-color: #749EFF;
 }	
 .fa-google{
  color:white;
@@ -162,9 +102,9 @@ font-size:30px;
 color:white;
 }
 .section-2{
-margin-top: 200px;
-margin-left: 70px;
-margin-right: 20px;
+margin-top: 100px;
+margin-left: 50px;
+margin-right: 0px;
 background-color: #F9FAFC;
 height: 100%;
 
@@ -201,10 +141,7 @@ font-size:75px;
 .v-centered{
  vertical-align:center;
 }
-.v-centered2{
- vertical-align:center;
- background-color:#98B8FD;
-}
+
 .right-sidebar {
  background-color:white;
  right:0;
@@ -212,6 +149,9 @@ font-size:75px;
  height:100%;
  margin-right:5px;
  position:fixed
+}
+.v-centered {
+ vertical-align:center;
 }
 .cards{
 margin-left:80px;
