--- a/home/box2-bkup.css
+++ b/home/box2-bkup.css
@@ -1,8 +1,8 @@
 body {
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
     width: 100%;
     margin: 0;
-    background-color: black;
+    background-color: #F9FAFC;
 }
 
 .left-sidebar {
@@ -16,8 +16,7 @@ body {
  height:100%;
  margin-left:0px;
  z-index: 1000;
-
-box-shadow:0px 0px px #afafafd1;
+ box-shadow:0px 0px px #afafafd1;
 }
 ul {
     list-style: none;
@@ -64,12 +63,14 @@ border: none;
     margin-top: 10px;
 }
 .search-icon{
-
-color:grey;
+    color:grey;
+}
+.heading{
+    display:inline;
 }
 .notification{
 padding-top:17px;
-padding-right: 200px;
+padding-right: 333px;
 border:none;
 float:right;
 background: transparent;
@@ -165,7 +166,10 @@ color:white;
 	 font-size:28px;
 }
 
-.content > .fa-square-o{
+.content-button{
+    display:inline;
+}
+.content-button > .fa-square-o{
 	font-size:40px;
 	color:white;
 	background-color: #749EFF;
@@ -184,7 +188,7 @@ color:white;
 }
 
 .cardscontent{
-    background-color: red;
+    background-color: #F9FAFC;;
 
 }
 .bold-content {
@@ -361,7 +365,7 @@ border-radius:7.5px;
     background-color: white;
     font-size: 15px;
     margin-right: 25px;
-  	width:30px;
+    width:50px;
     height: 30px;
     margin-top: -18px;
     margin-left: 166px;
@@ -370,17 +374,13 @@ border-radius:7.5px;
 .v-centered{
  vertical-align:center;
 }
-.v-centered2{
- vertical-align:center;
- background-color:#98B8FD;
-}
 
 .card {
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 270px;
     margin-left: 7%;
-    background-color: black;
+    background-color: #ffff;
     margin-top: 5%;
     height: auto;
 }
@@ -441,38 +441,38 @@ margin-right:0px;
     clear: both;
 }
 
-@media screen and  (max-width: 768px) {
+@media screen and  (max-width: 1144px) {
 .left-sidebar {
-
+    display: block;
     background-color: #749EFF;
     left: 0;
     top: 0;
     width: 100%;
-    height: 65px;
+    height: 45px;
     margin-left: 0px;
-
     box-shadow: 0px 0px 0px;
 }
 
 .left-sidebar a button {
-    height: 40px;
-    width: 90px;
+    margin-top: 0px;
+    height: 30px;
+    width: 95px;
     padding-left: 10px;
-    font-size: 31px;
+    font-size: 25px;
     border: none;
     background-color: #749EFF;
-}	
-ul {
-    list-style: none;
-    -webkit-padding-start: 0px;
 }
-
+ul {
+    margin-top: 10px;
+    list-style: none;
+    -webkit-padding-start: 30px;
+}
 li {
     display: inline;
 }
 
 .top-nav {
-    margin-top: 	0px;
+    margin-top: 45px;
     margin-left: 0px;
     margin-right: 0px;
     background-color: white;
@@ -482,7 +482,7 @@ li {
 }
 
 #search-button {
-    margin-left: 0px;
+    margin-left: 35px;
     height: 20px;
     background-color: white;
     border: none;
@@ -511,13 +511,23 @@ li {
     height: auto;
 }
 .content > .fa-square-o {
-    display:none;
-    font-size: 10px;
+    
+    font-size: 20px;
     color: white;
     background-color: #749EFF;
+
 }
+.mid-content{
+    
+    color: #6a6c71;
+    font-size: 30px;
+    text-align: center;
+}
+
 .mid-content b{
-    display:none;
+    margin-left: 150px;
+    display:block;
+    text-align:center;
 }
 .mid-buttons {
     display:inherit;
@@ -525,7 +535,7 @@ li {
     padding-top: 15px;
 }
 body{
-    background-color:black;
+    background-color: #ffff;
  }
 
 .card {
@@ -533,13 +543,13 @@ body{
     transition: 0.3s;
     width: 40%;
     margin-left: 8.5%;
-    background-color: black;
+    background-color: #ffff;
     margin-top: 7%;
     height: auto;
     margin-left: 50px;
 }
 .cardscontent {
-    background-color: red;
+    background-color: #F9FAFC;;
 
 }
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -580,6 +590,11 @@ body {
     width: 100%;
     /* position: sticky; */
 }
+
+.search-icon {
+    margin-left: 10px;
+    margin-top: 15px;
+}
 .login {
     float: right;
     margin-right: -225px;
@@ -610,6 +625,14 @@ body {
 input[type=text] {
     display: none;
  }
+.notification {
+    padding-top: 15px;
+    padding-right: 175px;
+    border: none;
+    float: right;
+    background: transparent;
+    background-color: white;
+}
 
 .section-2 {
     width:100%
@@ -620,6 +643,10 @@ input[type=text] {
     background-color: #F9FAFC;
     height: auto;
 }
+.mid-content b{
+    display:none;
+}
+
 .mid-buttons {
     display: inline;
     padding-right: 85px;
@@ -675,7 +702,7 @@ button.button1 {
     transition: 0.3s;
     width: 85%;
     /* margin-left: 8.5%; */
-    background-color: black;
+    background-color: #ffff;
     /* margin-top: 7%; */
     height: auto;
     /* margin-left: 50px; */
@@ -690,7 +717,7 @@ button.button1 {
     background-color: white;
     font-size: 15px;
     margin-right: 25px;
-    width: 30px;
+    width: 50px;
     height: 30px;
     margin-top: -18px;
     margin-left: 166px;
