--- a/scss/test.scss
+++ b/scss/test.scss
@@ -1,4 +1,3 @@
-
 $font-size:62.5%;
 $font-face:"Trebuchet MS", Helvetica, sans-serif;
 $base-color:#ffff;
@@ -12,11 +11,18 @@ ul {
 list-style: none;
 -webkit-padding-start: 0px;
  }
+ .selected{
+   background-color: #EDEDED;
+ }
+ .right-float{
+   float: right;
+ }
  span{
    color:#1379D3;
    font-size: 25px;
    display: inline;
  }
+
  button{
  height: 50px;
  width: 60px;
@@ -77,6 +83,8 @@ list-style: none;
     background: #F4F4F4;
     height: 100%;
     display: inline-block;
+    -webkit-transition: width 0.5s; /* For Safari 3.1 to 6.0 */
+   transition: width 0.35s;
 
    a button {
    height: 50px;
@@ -91,14 +99,14 @@ list-style: none;
   padding-left: 20px;
   color: darkgrey;
   }
-  span{
+  .innerspan{
     color:#716262;
     font-size: 15px;
-    display: inline;
+    display:inline;
   }
 }
 .list-content{
-  width: 60%;
+  width: 97%;
 background-color: #ffff;
 height: auto;
  .heading{
@@ -129,7 +137,7 @@ height: auto;
      }
      .list-inner-content{
       margin: 3%;
-      width: 90%;
+      width: 96%;
       height: 100%;
   .add-task{
 border-bottom: 1px solid lightgrey;
@@ -148,10 +156,14 @@ border-bottom: 1px solid lightgrey;
          padding-left: 0px;
          color: #1379D3;
          }
-         span{
-           color:#1379D3;
-           font-size: 25px;
+         input{
+           font-size: 16px;
            display: inline;
+           border:none;
+           width: 85%;
+         }
+         ::placeholder{
+           color:#1379D3
          }
        }
        ul{
@@ -175,16 +187,24 @@ border-bottom: 1px solid lightgrey;
       font-size: 18px;
        }
         }
+        .item:hover{
+          background-color: lightgrey;
+    color: white;
+
+        }
      }
 }
 }
 .side-content{
+  display:none;
   background-color: #F4F4F4;
     width: 33%;
     height: 100%;
     padding-left: 16px;
     padding-top: 17px;
     padding-right: 8px;
+    -webkit-transition: width 0.5s; /* For Safari 3.1 to 6.0 */
+   transition: width 0.35s;
   .right-top-content-one{
     display: inherit;
     background-color: white;
@@ -192,8 +212,10 @@ border-bottom: 1px solid lightgrey;
     width: 97%;
     border: 1px solid white;
     .content{
-      display: inline;
-
+    display: inline-flex;
+    .fa-star-o{
+  float:right;
+}
       button{
         vertical-align: inherit;
         position: relative;
@@ -205,33 +227,34 @@ border-bottom: 1px solid lightgrey;
         color: #1379D3;
       }
       span{
+        padding: 5%;
         color:lightgrey;
          font-size: 22px;
          text-decoration: line-through;
           }
     }
   }
+
   .right-top-content-two{
     display: inherit;
     background-color: white;
     height: auto;
     width: 97%;
     border: 1px solid white;
-    .content{
+    .content-2{
       display: inline;
 
-      button{
+      .button-class {
         vertical-align: inherit;
         position: relative;
         font-size: 22px;
         color: darkgrey;
-     }
-      .button-class {
         padding-left: 0px;
-        color: #1379D3;
+        color: darkgrey;
       }
       span{
-         font-size: 20px;
+        color:lightgrey;
+         font-size: 22px;
           }
     }
   }
@@ -239,48 +262,87 @@ border-bottom: 1px solid lightgrey;
   .right-top-content-three{
     display: inherit;
     background-color: white;
-    height: 25%;
+    height: auto;
     width: 97%;
     border: 1px solid white;
-    .content{
-      display: inline;
-
-      button{
+    .content-3{
+    display: -webkit-inline-box;
+   .inner-div-1{
+     display: inline;
+      .button-class {
         vertical-align: inherit;
         position: relative;
         font-size: 22px;
         color: darkgrey;
-     }
-      .button-class {
         padding-left: 0px;
-        color: #1379D3;
+        color: darkgrey;
       }
-      span{
-         font-size: 20px;
-          }
     }
+    .inner-div-2{
+          display: inline-flex;
+      border-bottom: 1px solid lightgrey;
+    span{
+      color:lightgrey;
+       font-size: 22px;
+        }
+    }
+  }
   }
   .right-top-content-four{
     display: inherit;
-    background-color: white;
-    height: 25%;
+      background-color: white;
+      height: 67px;
+      width: 97%;
+      border: 1px solid white;
+      /* padding: 2px; */
+    .content-4{
+      display: inline;
+      span{
+        padding-top: 12%;
+            padding: 10%;
+            color: darkgray;
+            font-size: 22px;
+          }
+
+    }
+  }
+}
+.bottom-right{
+  display: inherit;
+  background-color: grey;
+    height: 67px;
     width: 97%;
     border: 1px solid white;
-    .content{
-      display: inline;
+  /*right: 11px;
+position: absolute;
+bottom: 0;
+display: inline-flex;
+background-color: grey;
+height: auto;
+width: 29%;
+border: 1px solid white;*/
+  .left-bottom-content-one{
 
+    .content{
+    display: inline-flex;
+    .fa-star-o{
+  float:right;
+}
       button{
         vertical-align: inherit;
-        position: relative;
-        font-size: 22px;
-        color: darkgrey;
+  position: relative;
+  font-size: 22px;
+  color: black;
+  background: gray;
      }
       .button-class {
         padding-left: 0px;
         color: #1379D3;
       }
       span{
-         font-size: 20px;
+        padding: 5%;
+        color:lightgrey;
+         font-size: 22px;
           }
     }
   }
