--- a/scss/new/test.scss
+++ b/scss/new/test.scss
@@ -7,7 +7,11 @@ body{
   color:$base-color;
   margin:auto;
 }
-
+.hidden-innerspan{
+  color:#716262;
+  font-size: 15px;
+  display: none;
+}
 ul {
 list-style: none;
 -webkit-padding-start: 0px;
@@ -98,6 +102,14 @@ list-style: none;
    border: none;
    background-color: #F4F4F4;
 }
+.new{
+  border:none;
+  width:auto;
+
+}
+.myList{
+  background-color: $top-nav-color;
+}
 .button-class {
 	font-size: 20px;
   padding-left: 20px;
@@ -108,6 +120,13 @@ list-style: none;
     font-size: 15px;
     display:inline;
   }
+  .innerspan-input{
+  border: none;
+    color: lightgrey;
+    font-size: 15px;
+    display: inline;
+    width: 145px;
+}
 }
 .list-content{
   width: 97%;
