--- a/scss/new/css-changed/css.css
+++ b/scss/new/css-changed/css.css
@@ -6,9 +6,7 @@ body{
   font:$font-size $font-face;
   color:$base-color;
   margin:auto;
-}
-textarea{
-  width: 100%;
+  height:97%;
 }
 .hidden-innerspan{
   color:#716262;
@@ -297,7 +295,7 @@ border-bottom: 1px solid lightgrey;
         padding: 5%;
         color:lightgrey;
          font-size: 22px;
-         //text-decoration: line-through;
+         text-decoration: line-through;
           }
     }
   }
@@ -353,7 +351,6 @@ border-bottom: 1px solid lightgrey;
       color:lightgrey;
        font-size: 22px;
       }
-
     .dateoneOne{
       padding-left: 30px;
       outline: none;
@@ -367,8 +364,12 @@ border-bottom: 1px solid lightgrey;
         border: none;
         }
     }
-    
-      
+    .dateoneOne-toggle{
+      padding-left: 30px;
+      outline: none;
+      display: none;
+      border: none;
+      }
       .datetwoTwo-toggle{
         padding-left: 30px;
         outline: none;
@@ -378,6 +379,10 @@ border-bottom: 1px solid lightgrey;
   }
   }
   .right-top-content-four{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    width: 34%;
     display: inherit;
       background-color: white;
       height: 75px;
@@ -401,25 +406,21 @@ height: 65px;
   }
 }
 .bottom-right{
-  display: inherit;
-  background-color: grey;
-    height: 67px;
-    width: 97%;
-    border: 1px solid white;
-  /*right: 11px;
+
+  right: 11px;
 position: absolute;
 bottom: 0;
 display: inline-flex;
 background-color: grey;
 height: auto;
 width: 29%;
-border: 1px solid white;*/
+border: 1px solid white;
   .left-bottom-content-one{
 
     .content{
     display: inline-flex;
-    .fa-trash-o{
-      margin-left: 30px;
+    .fa-star-o{
+
   float:right;
 }
       button{
@@ -434,7 +435,6 @@ border: 1px solid white;*/
         color: #1379D3;
       }
       span{
-        width: auto;
         padding: 5%;
         color:lightgrey;
          font-size: 22px;
@@ -442,10 +442,5 @@ border: 1px solid white;*/
     }
   }
 }
-.dateoneOne-toggle{
-  padding-left: 30px;
-  outline: none;
-  display: none;
-  border: none;
-  }
 }
+
