--- a/scss/new/test1.css
+++ b/scss/new/test1.css
@@ -3,6 +3,9 @@ body {
   color: #ffff;
   margin: auto; }
 
+textarea {
+  width: 100%; }
+
 .hidden-innerspan {
   color: #716262;
   font-size: 15px;
@@ -79,7 +82,7 @@ button {
   display: inline-flex;
   height: 100%; }
   .contents .side-nav {
-    width: 20%;
+    width: 25%;
     background: #F4F4F4;
     height: 100%;
     display: inline-block;
@@ -108,10 +111,23 @@ button {
       display: inline; }
     .contents .side-nav .innerspan-input {
       border: none;
-      color: lightgrey;
+      outline: none;
+      color: grey;
       font-size: 15px;
       display: inline;
       width: 145px; }
+  .contents .sidenav-collapse {
+    width: 6%;
+    background: #F4F4F4;
+    height: 100%;
+    display: inline-block;
+    -webkit-transition: width 0.5s;
+    /* For Safari 3.1 to 6.0 */
+    transition: width 0.35s; }
+  .contents .innerspan-collapse {
+    color: #716262;
+    font-size: 15px;
+    display: non; }
   .contents .list-content {
     width: 97%;
     background-color: #ffff;
@@ -169,11 +185,12 @@ button {
           padding-left: 30px;
           color: #1379D3; }
         .contents .list-content .list-inner-content .add-task input {
+          outline: none;
           margin-left: 22px;
           font-size: 16px;
           display: inline;
           border: none;
-          width: 84%; }
+          width: 80%; }
         .contents .list-content .list-inner-content .add-task ::placeholder {
           color: #1379D3; }
         .contents .list-content .list-inner-content .add-task .disply-none {
@@ -221,6 +238,7 @@ button {
       .contents .side-content .right-top-content-one .content {
         display: inline-flex; }
         .contents .side-content .right-top-content-one .content .fa-star-o {
+          margin-left: 155px;
           float: right; }
         .contents .side-content .right-top-content-one .content button {
           vertical-align: inherit;
@@ -233,8 +251,7 @@ button {
         .contents .side-content .right-top-content-one .content span {
           padding: 5%;
           color: lightgrey;
-          font-size: 22px;
-          text-decoration: line-through; }
+          font-size: 22px; }
     .contents .side-content .right-top-content-two {
       display: inherit;
       background-color: white;
@@ -276,10 +293,25 @@ button {
           .contents .side-content .right-top-content-three .content-3 .inner-div-2 span {
             color: lightgrey;
             font-size: 22px; }
+          .contents .side-content .right-top-content-three .content-3 .inner-div-2 .dateoneOne {
+            padding-left: 30px;
+            outline: none;
+            display: none;
+            border: none; }
+          .contents .side-content .right-top-content-three .content-3 .inner-div-2 .datetwoTwo {
+            padding-left: 30px;
+            outline: none;
+            display: none;
+            border: none; }
+        .contents .side-content .right-top-content-three .content-3 .datetwoTwo-toggle {
+          padding-left: 30px;
+          outline: none;
+          display: none;
+          border: none; }
     .contents .side-content .right-top-content-four {
       display: inherit;
       background-color: white;
-      height: 67px;
+      height: 75px;
       width: 97%;
       border: 1px solid white;
       /* padding: 2px; */ }
@@ -290,6 +322,10 @@ button {
           padding: 10%;
           color: darkgray;
           font-size: 22px; }
+          .contents .side-content .right-top-content-four .content-4 span .note {
+            margin: 0px;
+            width: 267px;
+            height: 65px; }
   .contents .bottom-right {
     display: inherit;
     background-color: grey;
@@ -306,7 +342,8 @@ width: 29%;
 border: 1px solid white;*/ }
     .contents .bottom-right .left-bottom-content-one .content {
       display: inline-flex; }
-      .contents .bottom-right .left-bottom-content-one .content .fa-star-o {
+      .contents .bottom-right .left-bottom-content-one .content .fa-trash-o {
+        margin-left: 30px;
         float: right; }
       .contents .bottom-right .left-bottom-content-one .content button {
         vertical-align: inherit;
@@ -318,6 +355,12 @@ border: 1px solid white;*/ }
         padding-left: 0px;
         color: #1379D3; }
       .contents .bottom-right .left-bottom-content-one .content span {
+        width: auto;
         padding: 5%;
         color: lightgrey;
         font-size: 22px; }
+  .contents .dateoneOne-toggle {
+    padding-left: 30px;
+    outline: none;
+    display: none;
+    border: none; }
