--- a/scss/new/to-do-list/src/style.scss
+++ b/scss/new/to-do-list/src/style.scss
@@ -416,27 +416,28 @@ border-bottom: 1px solid lightgrey;
       display: none;
       border: none;
       }
-     /* .dateoneOne-toggle{
+      .dateoneOne-toggle{
         padding-left: 30px;
         outline: none;
         display: block;
         border: none;
-        }*/
+        }
       .datetwoTwo{
         padding-left: 30px;
         outline: none;
         display: none;
         border: none;
         }
+        .datetwoTwo-toggle{
+          padding-left: 30px;
+          outline: none;
+          display: block;
+          border: none;
+          }
     }
     
       
-      .datetwoTwo-toggle{
-        padding-left: 30px;
-        outline: none;
-        display: none;
-        border: none;
-        }
+      
   }
   }
   .right-top-content-four{
